# wordle_final_project_cpp

./: .gitignore  CMakeLists.txt  README.md
data/: players.json  scores.json  wordbank.json  wordbank.txt  wordbank_3.json  wordbank_5.json  wordbank_6.json
src/: main.cpp
